--- a/syoukai.css
+++ b/syoukai.css
@@ -1,13 +1,16 @@
-    body {
-        font-family: 'Arial', sans-serif;
-        line-height: 1.6;
-        margin: 20px;
-    }
-
-    h1 {
-        color: #333;
-    }
-
-    p {
-        color: #666;
-    }
+body
+{
+            background-color: green; 
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+}
+header {
+    text-align: center;
+    color: white;
+        }
+section {
+    color: white;
+}
